[project]
name = "deep-reinforcement-learning-hands-on-third-edition"
version = "0.1.0"
package-mode = false 
description = ""
authors = [
    {name = "Serhiy"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "gymnasium[accept-rom-license] (==0.29.1)",
    "moviepy (==1.0.3)",
    "numpy (<2)",
    "opencv-python (==4.10.0.84)",
    "pytorch-ignite (==0.5.1)",
    "tensorboard (==2.18.0)",
    "mypy (==1.8.0)",
    "stable-baselines3 (==2.3.2)",
    "pytest (>=8.4.1,<9.0.0)",
    "ray (>=2.48.0,<3.0.0)",
    "torchrl (>=0.9.2,<0.10.0)",
    "ale-py (>=0.11.2,<0.12.0)",
    "torch (>=2.8.0,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
